# Board_Detection

./: CMakeLists.txt  README.md
build_process/: Git.md  raspberry_pi.md
camera_internal_parameter/src/: main.cpp
canshu/src/: main.cpp
src/: board_detector.cpp  cam_capture.cpp  main.cpp  pnp.cpp  serial.cpp  test.cpp  test2.cpp
